fix: fixing a component button on mobile to change font size and add a waterdel png to readme file

--- a/src/style.css
+++ b/src/style.css
@@ -3646,3 +3646,9 @@ body {
     text-align: center;
   }
 }
+
+@media screen and (max-width: 348px) {
+  .components__btn.components__btn--laptop {
+    font-size: 14px;
+  }
+}
